# time-to-table

./: .gitignore  README.md  package-lock.json  package.json
src/: about.md  about.txt  index.html  instruction.md  license(ru).md  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tools/: ThisWorkbook_manual_commented.bas  export_vba.ps1  generate_vba_workbook.ps1  modTimeToTable_manual.bas  modTimeToTable_manual_commented.bas  read_export.ps1  sheet_Ввод_manual_commented.bas  sheet_Дисклеймер_manual_commented.bas  sheet_Для Заметок_manual_commented.bas  sheet_История_manual_commented.bas  sheet_Парсинг MRS_manual_commented.bas  sheet_Результат_manual_commented.bas
